Initial commit with table level bytes deleted metrics